--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,25 @@
 /log/*
 !/log/.keep
 /tmp
+/.bundle
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/log/*.log
+/tmp
+/.bundle
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/log/*.log
+/tmp
+database.yml
+doc/
+*.swp
+*~
+.project
+.idea
+.secret
+.DS_Store
+.env
+/public
+/log
+.vagrant
